<resources>
    <string name="scrap">스크랩</string>
    <string name="catchphrase">언제 어디서든\n간편하게\n스크랩하기</string>
    <string name="login">로그인</string>
    <string name="hello_blank_fragment">빈 프래그먼트</string>
    <string name="category">카테고리</string>
    <string name="favorite">즐겨찾기</string>
    <string name="search">검색</string>
    <string name="mypage">마이페이지</string>
    <string name="add_category">카테고리 추가하기</string>
    <string name="hint_add_category">카테고리명을 입력하세요</string>
    <string name="add">추가하기</string>
    <string name="cancel">취소</string>
    <string name="error_text_length_0">최소 1글자 이상 적어야 합니다.</string>
    <string name="error_text_length_22">최대 21자까지만 입력할 수 있습니다.</string>
    <string name="memo">메모</string>
    <string name="main_description_default">본문 내용이 없습니다</string>
    <string name="description">본문내용</string>
    <string name="move">이동</string>
    <string name="share">공유</string>
    <string name="memo_edit">메모 수정</string>
    <string name="delete">삭제</string>
    <string name="add_scrap">스크랩 추가하기</string>
    <string name="go_up">맨 위로 이동</string>
    <string name="go_back">뒤로가기</string>
    <string name="change_view_type">보기 방식 변경</string>
    <string name="edit_category">카테고리 수정하기</string>
    <string name="delete_category">카테고리 삭제하기</string>
    <string name="hint_search_by_title">제목으로 검색하기</string>
    <string name="hint_search">검색하기</string>
    <string name="change_sort">정렬 방식 변경</string>
    <string name="image_scrap">스크랩 미리보기 이미지</string>
    <string name="is_checked">아이템 선택 표시</string>
    <string name="is_favorite">아이템 즐겨찾기 표시</string>
    <string name="sort_by_date">스크랩한 날짜 순</string>
    <string name="sort_by_title">제목 순</string>
    <string name="edit">수정하기</string>
    <string name="hint_link">링크를 입력하세요</string>
    <string name="hint_memo">메모를 입력하세요</string>
    <string name="alert_delete_scrap">정말 스크랩을 삭제하시겠습니까?</string>
    <string name="delete_category_radio_checked">해당 카테고리에 속한 모든 스크랩 ‘분류되지 않음’ 카테고리로 이동하기</string>
    <string name="alert_delete_category">정말 카테고리를 삭제하시겠습니까?\n</string>
    <string name="alert_delete_category_detail">(해당 카테고리에 속한 모든 스크랩 또한 삭제됩니다)</string>
    <string name="link_copy">링크 복사</string>
    <string name="error_empty_link">링크는 필수 입력입니다.</string>
    <string name="erase_searchview">검색창 비우기</string>
    <string name="search_range">검색 범위</string>
    <string name="title">제목</string>
    <string name="date">날짜</string>
    <string name="error_search_range_at_least_1">검색 범위는 최소 1개 이상 선택해주세요.</string>
</resources>