<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/categoryFragment"
        android:title="@string/category"
        android:icon="@drawable/nav_category" />

    <item
        android:id="@+id/scrapFragment"
        android:title="@string/scrap"
        android:icon="@drawable/nav_scrap" />

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/nav_favorite" />

    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/nav_search" />

    <item
        android:id="@+id/mypageFragment"
        android:title="@string/mypage"
        android:icon="@drawable/nav_mypage" />
</menu>