<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddScrapActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/main"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/expand_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAddScrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:text="@string/add_scrap"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageBgAddScrap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="107dp"
        android:background="@drawable/bg_round_8dp"
        android:backgroundTint="@color/main_light"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/editTextLink"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_round_10dp"
        android:backgroundTint="@color/main"
        android:gravity="center_vertical"
        android:hint="@string/hint_link"
        android:includeFontPadding="false"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/imageBgAddScrap"
        app:layout_constraintStart_toStartOf="@+id/imageBgAddScrap"
        app:layout_constraintTop_toTopOf="@+id/imageBgAddScrap"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textMemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:includeFontPadding="false"
        android:text="@string/memo"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/imageBgAddScrap"
        app:layout_constraintTop_toBottomOf="@+id/editTextLink" />

    <EditText
        android:id="@+id/editTextMemo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_round_10dp"
        android:backgroundTint="@color/main"
        android:gravity="top"
        android:hint="@string/hint_memo"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageBgAddScrap"
        app:layout_constraintEnd_toEndOf="@+id/imageBgAddScrap"
        app:layout_constraintStart_toStartOf="@+id/imageBgAddScrap"
        app:layout_constraintTop_toBottomOf="@+id/textMemo"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="158dp"
        android:layout_height="61dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/gray_light"
        android:text="@string/cancel"
        android:textColor="@color/gray_heavy"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBgAddScrap" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="158dp"
        android:layout_height="61dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/main_heavy"
        android:text="@string/add"
        android:textColor="@color/main"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/imageBgAddScrap" />

</androidx.constraintlayout.widget.ConstraintLayout>