<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddCategoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/main"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/expand_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:text="@string/add_category"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageBgAddCategory"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="15dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_category_bg" />

    <EditText
        android:id="@+id/editTextAddCategory"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/bg_edit_add_category"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:hint="@string/hint_add_category"
        android:textSize="15sp"
        android:inputType="text"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="158dp"
        android:layout_height="61dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="#EDEDED"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textColor="#7E7E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="158dp"
        android:layout_height="61dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/main_heavy"
        android:text="@string/add"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>