<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_search_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.nav.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_search_criteria"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:text="@string/search"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_background_et_searchview"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_round_8dp"
            android:backgroundTint="@color/main_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/iv_icon_search"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/search"
            app:layout_constraintBottom_toBottomOf="@id/iv_background_et_searchview"
            app:layout_constraintStart_toStartOf="@id/iv_background_et_searchview"
            app:layout_constraintTop_toTopOf="@id/iv_background_et_searchview"
            android:contentDescription="@string/search" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/search"
            android:includeFontPadding="false"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@id/iv_background_et_searchview"
            app:layout_constraintStart_toEndOf="@id/iv_icon_search"
            app:layout_constraintTop_toTopOf="@id/iv_background_et_searchview"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/iv_icon_erase"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/close_ring_duotone"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/iv_background_et_searchview"
            app:layout_constraintEnd_toEndOf="@id/iv_background_et_searchview"
            app:layout_constraintTop_toTopOf="@id/iv_background_et_searchview"
            tools:visibility="visible"
            android:contentDescription="@string/erase_searchview" />

        <LinearLayout
            android:id="@+id/linearlayout_search_criteria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_background_et_searchview">

            <View
                android:id="@+id/divider_search_criteria_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_search_range"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/tv_search_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="15sp"
                    android:text="@string/search_range" />

                <RadioGroup
                    android:id="@+id/radiogroup_search_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_search_range">

                    <RadioButton
                        android:id="@+id/rbtn_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_checkbox_button"
                        android:paddingStart="4dp"
                        android:paddingEnd="20dp"
                        android:text="@string/title" />

                    <RadioButton
                        android:id="@+id/rbtn_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_checkbox_button"
                        android:paddingStart="4dp"
                        android:paddingEnd="20dp"
                        android:text="@string/description" />

                    <RadioButton
                        android:id="@+id/rbtn_memo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_checkbox_button"
                        android:paddingStart="4dp"
                        android:paddingEnd="20dp"
                        android:text="@string/memo" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>